<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/offset_x14"
    android:orientation="vertical"
    android:paddingTop="@dimen/offset_x2"
    android:paddingBottom="@dimen/offset_x2">


    <TextView
        android:id="@+id/tvMessageDeleteBankCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/offset_x3"
        android:text="@string/message_no_internet"
        android:textColor="@color/color_head_text"
        android:textSize="@dimen/headline_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnExitFromApp"
            style="@style/TextButtonTranslucentStroked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_x2"
            android:layout_marginEnd="@dimen/offset_x2"
            android:layout_weight="1"
            android:text="@string/network_exit_app" />

        <TextView
            android:id="@+id/btnTryAgain"
            style="@style/TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_x2"
            android:layout_marginEnd="@dimen/offset_x2"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/try_again" />
    </LinearLayout>
</LinearLayout>
