<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_x2"
        app:cardCornerRadius="@dimen/offset_x2">

        <LinearLayout
            android:id="@+id/ll_recycler_few_posts_in_marker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/offset_x2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/offset_x40">

                <ImageView
                    android:id="@+id/iv_ptoto_recycler_few_posts_in_marker"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_sort_recycler_few_posts_in_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_x2"
                    android:layout_marginEnd="@dimen/offset_x2"
                    android:background="@drawable/bg_white_boarder_grey"
                    android:padding="@dimen/offset_x3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/tv_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/offset_x"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView9"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movies_average"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/offset_x4"
                    android:layout_marginTop="@dimen/offset_x"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textStyle_12_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movies_language" />

                    <TextView
                        android:id="@+id/tv_original_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_x"
                        android:layout_marginEnd="@dimen/offset_x4"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textSize="@dimen/headline_4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/offset_x4"
                    android:layout_marginTop="@dimen/offset_x"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textStyle_12_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movies_title"/>

                    <TextView
                        android:id="@+id/tv_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_x"
                        android:layout_marginEnd="@dimen/offset_x4"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textSize="@dimen/headline_4" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_container_for_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/offset_x4"
                    android:layout_marginTop="@dimen/offset_x"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textStyle_12_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movies_popularity" />

                    <TextView
                        android:id="@+id/tv_popularity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/offset_x"
                        android:layout_marginEnd="@dimen/offset_x4"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textSize="@dimen/headline_4"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>